kustomize/base/pgweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgweb
  namespace: homelab
  labels:
    app: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgweb
  template:
    metadata:
      labels:
        app: pgweb
    spec:
      containers:
        - name: pgweb
          image: sosedoff/pgweb:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
          readinessProbe:
            exec:
              command: ["nc", "-vz", "127.0.0.1", "8081"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1
