kustomize/base/pgweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgweb-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "db.apps.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgweb
                port:
                  name: http
  tls:
    - secretName: homelab-tls-cert
